[tool.poetry]
name = "inspire_arxiv_completness_check"
version = "0.1.0"
description = ""
authors = ["MJedr <jedrych.marcysia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"
Sickle = "^0.7.0"
requests = "^2.27.1"
zulip = "^0.8.2"
elasticsearch-dsl = "^7.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
