[tool.poetry]
name = "arxiv_completeness"
version = "0.1.0"
description = "A plugin that responds with a friendly hello."
authors = ["rcs-sis-ts"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
errbot = "^6.1.0"
Sickle = "0.7.0"
opensearch-py = "2.7.1"


[tool.poetry.dev-dependencies]
pytest = "^6.0"
errbot-backend-test = "^6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
